# react_remix_experiments

remix_cra/: .eslintrc.cjs  package.json  pnpm-lock.yaml
remix_cra/app/: entry.server.jsx  root.jsx
remix_cra/app/routes/: _index.jsx  demo.jsx
remix_melange/: .gitignore  README.md  dune  dune-project  package.json  remix_melange.opam
remix_melange/routes/: demo.re  dune  index.re
